# cpp-adventures

./: .gitignore  .gitmodules  README.md
1-learning-make/: README.md
1-learning-make/1-hello-world/: Makefile
1-learning-make/3-compiler-flags/: Makefile
1-learning-make/4-wildcard-files-basic/: Makefile
1-learning-make/5-wildcard-files-adv/: Makefile
1-learning-make/6-makefile-template/: Makefile
1-learning-make/6-makefile-template/src/: main.cc
2-learning-c-make/: README.md
2-learning-c-make/03-intermediate-project/: CMakeLists.txt
2-learning-c-make/04-variables-options/: Makefile
2-learning-c-make/05-config-file/: Makefile
2-learning-c-make/05-config-file/src/my_lib/: CMakeLists.txt
2-learning-c-make/06-better-project/app/: CMakeLists.txt
2-learning-c-make/06-better-project/src/my_lib/: CMakeLists.txt
2-learning-c-make/07-git-submodule/app/: CMakeLists.txt  main.cc
2-learning-c-make/08-fetch-content/: CMakeLists.txt  Makefile
2-learning-c-make/08-fetch-content/src/my_lib/: CMakeLists.txt  my_lib.cc
2-learning-c-make/09-doxygen/app/: main.cc
2-learning-c-make/09-doxygen/src/my_lib/: my_lib.cc
2-learning-c-make/1-hello-world/: CMakeLists.txt
2-learning-c-make/10-unit-tests/: CMakeLists.txt
2-learning-c-make/11-warnings/: CMakeLists.txt
2-learning-c-make/11-warnings/app/: CMakeLists.txt
2-learning-c-make/2-basic-project/: CMakeLists.txt
2-learning-c-make/4-variables-options/: CMakeLists.txt
2-learning-c-make/5-config-file/app/: CMakeLists.txt
2-learning-c-make/5-config-file/configured/: CMakeLists.txt
2-learning-c-make/6-better-project/: CMakeLists.txt
2-learning-c-make/7-git-submodule/: CMakeLists.txt  Makefile
2-learning-c-make/8-fetch-content/app/: CMakeLists.txt
2-learning-c-make/9-doxygen/: CMakeLists.txt
3-cpp-quickstart/: Makefile  README.md
3-cpp-quickstart/src/: binary_tree.cpp  function_pointer.cpp  linked_list.cpp  main.cc  sizes.cpp
4-imgui/: CMakeLists.txt  README.md
4-imgui/app/: CMakeLists.txt
4-imgui/app/0-test-setup/: CMakeLists.txt  main.cc
4-imgui/app/1-file-manager/: CMakeLists.txt  main.cc  render.cpp  render.hpp
4-imgui/app/2-functions-plotter/: CMakeLists.txt  main.cc  render.cpp  render.hpp
4-imgui/app/3-text-editor/: CMakeLists.txt  main.cc  render.cpp  render.hpp
4-imgui/app/4-diff-viewer/: CMakeLists.txt  main.cc  render.cpp  render.hpp
4-imgui/app/5-paint/: CMakeLists.txt  main.cc  render.cpp  render.hpp
4-imgui/app/6-calendar/: CMakeLists.txt  main.cc  render.cpp  render.hpp
4-imgui/app/7-csv-editor/: CMakeLists.txt  main.cc  render.cpp  render.hpp
4-imgui/app/8-wall-clock/: CMakeLists.txt  main.cc  render.cpp  render.hpp
4-imgui/app/9-desktop/: CMakeLists.txt  clock.cpp  main.cc  render.cpp  render.hpp
4-imgui/app/A-final/: CMakeLists.txt  Calendar.cpp  Calendar.h  Clock.cpp  Clock.h  CsvEditor.cpp  CsvEditor.h  Window.cpp  Window.h  clock.h  main.cc  render.cpp  render.hpp
4-imgui/src/: CMakeLists.txt
4-imgui/src/my_lib/: CMakeLists.txt  my_lib.cc
5-performance-aware/: README.md
5-performance-aware/1-asm/: README.md
5-performance-aware/2-basic-profiling/: CMakeLists.txt  Makefile  base_json_lookup_parser.cpp  final_timeblock_json_lookup_parser.cpp  haversine_gen.cpp  profiled_haversine_main.cpp  profiled_json_lookup_parser.cpp  timeblock_json_lookup_parser.cpp  timed_haversine_main.cpp
5-performance-aware/2-basic-profiling-make-version/: .gitignore  Makefile  base_json_lookup_parser.cpp  common_types.h  cpu_timer_guessfreq_main.cpp  cpu_timer_main.cpp  double_counted_haversine_main.cpp  haversine_gen.cpp  nesting_haversine_main.cpp  nesting_timeblock_json_lookup_parser.cpp  os_timer_main.cpp  parser_main.cpp  profiled_haversine_main.cpp
5-performance-aware/2-basic-profiling-make-version/common/: common_file.h  common_haversine.h  common_random.h  haversine.h  json.h  platform_metrics.h  random.h
5-performance-aware/2-basic-profiling-make-version/profiler/: simple_profiler.h
5-performance-aware/2-basic-profiling/app/: CMakeLists.txt  main.cc
5-performance-aware/2-basic-profiling/app/0_test_data_generator/: CMakeLists.txt  generator_main.cc
5-performance-aware/2-basic-profiling/app/0_test_data_parser/: CMakeLists.txt  parser_main.cc
5-performance-aware/2-basic-profiling/cmake/: Docs.cmake
5-performance-aware/2-basic-profiling/common/: platform_metrics.h  types.h
5-performance-aware/2-basic-profiling/profiler/: nesting_profiler.h  recursive_profiler.h  simple_profiler.h
5-performance-aware/2-basic-profiling/src/: CMakeLists.txt
5-performance-aware/2-basic-profiling/src/haversine_lib/: CMakeLists.txt  haversine.cpp  haversine.h
5-performance-aware/2-basic-profiling/src/json_parser_lib/: CMakeLists.txt  base_json_lookup_parser.cpp  base_json_lookup_parser.h
5-performance-aware/2-basic-profiling/src/profiler_lib/: CMakeLists.txt  profiler.cc  profiler.h
5-performance-aware/2-basic-profiling/tests/: CMakeLists.txt  main.cc
5-performance-aware/3-moving-data/: Makefile  bandwidth_haversine_main.cpp  bandwidth_json_lookup_parser.cpp  final_haversine_main.cpp
5-performance-aware/3-moving-data/common/: file.h
5-performance-aware/3-moving-data/profiler/: bandwidth_profiler.h  final_profiler.h
6-open-gl/: .gitignore  README.md
6-open-gl/app/: CMakeLists.txt
6-open-gl/app/1-first-triangle/: CMakeLists.txt  main.cc
6-open-gl/app/2-shaders/: CMakeLists.txt  dc_utils.h  main.cc  shader.h
6-open-gl/app/3-textures/: CMakeLists.txt  README.md  env.h.sample  main.cc  shader.h  texture.h
6-open-gl/app/4-transformations/: CMakeLists.txt  main.cc
6-open-gl/app/5-coordinate-systems/: CMakeLists.txt  env.h.sample  main.cc  texture.h
6-open-gl/app/6-camera/: CMakeLists.txt  camera.h  env.h.sample  main.cc  shader.h
6-open-gl/app/7-lighting/: CMakeLists.txt  main.cc  shader.h
6-open-gl/app/8-materials/: CMakeLists.txt  camera.h  main.cc
7-web-server/: Makefile  connection_manager.cpp  server.cpp  thread_pool.cpp
learning-make/1_HelloWorld/: main.cc
learning-make/2_BasicStructure/: Makefile  main.cc
(+17 files in other folders)
