add_subdirectory(0-test-setup)
add_subdirectory(1-file-manager)
add_subdirectory(2-functions-plotter)
add_subdirectory(3-text-editor)
add_subdirectory(4-diff-viewer)
add_subdirectory(5-paint)
add_subdirectory(6-calendar)
add_subdirectory(7-csv-editor)
add_subdirectory(8-wall-clock)
add_subdirectory(9-desktop)
add_subdirectory(A-final)